(executables
 (names sum)
 (libraries climate_std)
 (preprocess
  (pps ppx_let))
 (modules sum))

(executables
 (names sum2)
 (libraries climate_std)
 (preprocess
  (pps ppx_let))
 (modules sum2))

(executables
 (names op)
 (libraries climate_std)
 (preprocess
  (pps ppx_let))
 (modules op))

(executables
 (names group)
 (libraries climate_std)
 (preprocess
  (pps ppx_let))
 (modules group))

(executables
 (names optional_args)
 (libraries climate_std)
 (preprocess
  (pps ppx_let))
 (modules optional_args))

(executables
 (names fake_git)
 (libraries climate_std)
 (preprocess
  (pps ppx_let))
 (modules fake_git))

(executables
 (names fib)
 (libraries climate_std)
 (preprocess
  (pps ppx_let))
 (modules fib))
